# taskmaster

./: .gitignore  CMakeLists.txt  config.yaml  main.cpp  process.cpp  process.hpp
src/: cli.cpp  cli.hpp  comm.cpp  comm.hpp  communication.cpp  communication.hpp  defaults.hpp  main.cpp  master.hpp  process.cpp  process.hpp  task.cpp  task.hpp  taskmaster.cpp  taskmaster.hpp
